# HR-Reporter

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config_loader.py  env_loader.py  logging_setup.py  main.py  models.py  pipeline.py  profile_loader.py  utils.py
hr_growth_assessment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
packs/: default_pack.yaml
tests/: test_adaptive_llm_batching.py  test_checks_engine.py  test_chunker_salience.py  test_chunker_semantic_headings.py  test_config_validation.py  test_csv_ingestion.py  test_evidence_collector_routing.py  test_evidence_collector_semantic_chunking.py  test_evidence_grounding_rules.py  test_evidence_status_constraints.py  test_field_retrieval.py  test_growth_drivers.py  test_headcount_extraction_and_stage_confidence.py  test_llm_client_extract_text.py  test_loaders_sources.py  test_openai_schema_normalization.py  test_priority_scoring.py  test_profile_evaluator.py  test_profile_loader.py  test_renderer_markdown.py  test_renderer_sanitization.py  test_report_exporters.py  test_report_reviser.py  test_schema_validation.py  test_scorecard.py  test_snapshot_batching.py  test_snapshot_evidence_payload.py  test_snapshot_explicit_extraction.py  test_snapshot_openai_schema_adapter.py  test_snapshot_prompt_allows_bullets.py  test_snapshot_retrieval_overlay.py  test_snapshot_semantics_and_merge.py  test_stage_guidance.py  test_stage_inference.py  test_stage_inference_confidence.py  test_stage_inference_profile.py  test_text_normalize.py  test_url_ingestion_quality.py  test_url_parsing.py
tuning/: profile.yaml
(+81 files in other folders)
